[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imu"
version = "0.0.1"
description = "IMU Control-Plane & Co-build"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["server*", "engine*", "program*", "policy*", "services*"]
